Avoid using `z-index`

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,8 @@
-.container_background {
+.wrapper {
+  position: relative;
   background-image: linear-gradient(to left, #001365, #000b3c, #000a33);
   height: 100%;
   overflow: hidden;
-  position: sticky;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .logo {
@@ -25,18 +18,57 @@
 
 .iphonePic {
   position: absolute;
-  /* top: 170px; */
   bottom: -30px;
   left: -270px;
-  z-index: 3;
 }
 
 .laptopPic {
   position: absolute;
-  /* top: 75px; */
   bottom: -54px;
   right: -415px;
-  z-index: 2;
+}
+
+.main_container {
+  /* Make sure  this element will stack on top (order of DOM element) */
+  position: relative;
+
+  width: 100%;
+  height: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 32px;
+  padding-top: 82px;
+}
+
+.main {
+  max-width: 675px;
+  margin: auto;
+  text-align: center;
+  height: 100%;
+}
+
+.title {
+  margin: 0;
+  font-size: 2rem;
+  color: #ffffff;
+  font-weight: 400;
+}
+
+.description {
+  display: inline-block;
+  color: #ffffff;
+  line-height: 1.7;
+  margin-top: 24px;
+  margin-bottom: 32px;
+  font-weight: 400;
+  max-width: 480px;
+}
+
+.svgWrapper {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 /* normal ipad landscape */
